--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 
 .home,
 .services,
-.projects,
 .aboutMe {
   display: flex;
   height: 50vh;
@@ -16,156 +15,164 @@
   font-size: 3rem;
 }
 
-.services-container, .projects-container, .aboutMe-container {
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  font-size: 70px;
-  color: #fff;
-  background-image: url('./images/1.png');
-  height: 100vh;
+
+.container1 {
+  height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-  object-fit: contain;
 }
 
-.aboutMe-container-img{
+.container1-text {
+  width: 60%;
+  background-color: #1DAFEC;
+  padding: 30px;
+  top: 0;
+}
+
+.container1-text > h1 {
+  font-size: 30px;
+  color: #fff;
+}
+
+.container1-text > p {
+  font-size: 22px;
+  color: #fff;
+}
+
+.container1-desc {
+  width: 60%;
+  background-color: #fff;
+  padding: 30px;
+  top: 0;
+}
+
+.container-contact {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  background-color: #1DAFEC;
+  padding: 30px;
+  top: 0;
   align-items: center;
-  object-fit: contain;
-  background-image: url('images/3.png');
 }
 
-.aboutMe-container > h1 {
-  color: #fff;
-  font-size: 70px;
-  margin-top: -80px;
-  margin-left: 450px;
-}
-
-.aboutMe-container > p {
-  font-size: 24px;
-  color: #fff;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-  'Lucida Sans', Arial, sans-serif;
-  padding: 30px;
-  margin-left: 450px;
-}
-
-.projects-container > h1 {
-  color: #fff;
-  font-size: 70px;
-  margin-top: -10px;
-}
-
-.projects-container, .aboutMe-container > p {
-  font-size: 24px;
-  color: #fff;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-  'Lucida Sans', Arial, sans-serif;
-  text-align: center;
-  padding: 30px;
-}
-
-.services-container > h1 {
-  color: #fff;
-  font-size: 70px;
-  margin-top: -120px;
-  margin-left: 450px;
-}
-
-.services-container > p {
-  font-size: 24px;
-  color: #fff;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-  'Lucida Sans', Arial, sans-serif;
-  padding: 30px;
-  margin-left: 450px;
-}
-
-.projects-container {
-  background-image: url('images/2.png');
-  height: 35vh;
-}
-
-.aboutMe-container {
-  background-image: url('images/5.png');
-  height: 100vh;
-  background-repeat: repeat;
-}
-
-.myimage {
-  height: 400px;
-  width: 400px;
-  object-fit: contain;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-image: url('images/me.jpg');
+.contact-text {
+  font-size: 20px;
+  color:#fff;
   padding: 1px;
-  border-radius: 200px;
+  text-align: center;
 }
+
+.contact-text > h1 {
+  text-decoration: underline;
+}
+
+.contact-text > p {
+  text-decoration: none;
+}
+
+
+
+.container1-desc > h1 {
+  font-size: 24px;
+  color:#1DAFEC;
+  padding-bottom: 10px;
+  text-decoration: underline;
+}
+
+.container1-desc > p {
+  font-size: 18px;
+  color:#1DAFEC;
+}
+
+.container1-image {
+  width: 40%;
+  height: 500px;
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 8%;
+}
+
+.ImageAbout {
+  height: 500px;
+  width: 100%;
+  background-position: center;
+  object-fit: contain;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.ImageAbout2 {
+  height: 400px;
+  width: 100%;
+  background-position: center;
+  object-fit: contain;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.map {
+  display: flex;
+  padding: 20px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+
 
 
 @media screen and (max-width: 600px) {
 
-  .projects-container {
-    height: 20vh;  
-  }
-
-  .aboutMe-container, .services-container {
-    height: 110vh;
-    background-image: url('images/2.png');
-  }
-
-  .projects-container > h1 {
-    font-size: 50px;
-  }
-  .aboutMe-container > h1 {
-    margin-top: 30px;
-    margin-left: 0px;
-    font-size: 40px;
-    text-decoration: underline;
-  }
-  
-  .aboutMe-container > p {
-    font-size: 22px;
-    color: #fff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-    padding: 20px;
-    margin-left: 0px;
-  }
-  .services-container > h1 {
-    margin-top: -20px;
-    margin-left: 0px;
-    font-size: 50px;
-    text-decoration: underline;
-  }
-  
-  .services-container > p {
-    font-size: 22px;
-    color: #fff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-    padding: 30px;
-    margin-left: 0px;
+  .container1-text {
+    width: 100%;
+    background-color: #1DAFEC;
+    padding: 10px;
+    top: 0;
     text-align: center;
   }
 
-  .myimage {
-  width: 100%;
-  height: 350px;
+  .container1-desc {
+    width: 100%;
+    background-color: #fff;
+    padding: 20px;
+    top: 0;
+    text-align: center;
   }
+
+  .container1-image {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 0;
+    padding: 10px;
+  }
+
+  .ImageAbout {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    object-fit: contain;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .map {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  max-width: 90vw;
+}
+
+
 }
