--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,5 +1,5 @@
 .cards {
-  padding: 2rem;
+  padding: 0.5rem;
   background: #fff;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .cards__items {
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 }
 
 .cards__item {
@@ -50,25 +50,13 @@
   width: 100%;
   padding-top: 67%;
   overflow: hidden;
+  height: 150px;
+  width: 150px;
 }
 
 .fade-img {
   animation-name: fade-img;
   animation-duration: 2s;
-}
-
-.cards__item__pic-wrap::after {
-  content: attr(data-category);
-  position: absolute;
-  bottom: 0;
-  margin-left: 10px;
-  padding: 6px 8px;
-  max-width: calc((100%) - 60px);
-  font-size: 12px;
-  font-weight: 700;
-  color: #fff;
-  background-color: #1f98f4;
-  box-sizing: border-box;
 }
 
 .cards__item__img {
@@ -82,7 +70,7 @@
   max-width: 100%;
   height: 100%;
   max-height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: all 0.2s linear;
 }
 
@@ -114,6 +102,6 @@
 
 @media only screen and (max-width: 1024px) {
   .cards__item {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 }
