--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -20,8 +20,8 @@ video {
   
   .hero-container > h1 {
     color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
+    font-size: 30px;
+    margin-top: 200px;
   }
   
   .hero-container > p {
@@ -34,7 +34,8 @@ video {
   }
   
   .hero-btns {
-    margin-top: 32px;
+    margin-top: 300px;
+    margin-right: 1000px;
   }
   
   .hero-btns .btn {
